bk_ida/gccida/c2/flow_loop_dump
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/flow_loop_dump/src/cfgloop.c:589:7: error: expected expression
if (  struct loop && loop->header ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/flow_loop_dump/src/cfgloop.c:640:16: error: use of undeclared identifier 'asc_6474F1'
fprintf( file, asc_6474F1, ( unsigned int)loop->num_nodes); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/flow_loop_dump/src/obj/cfgloop.o] Error 1
